- enhanced some functions on certain modules. - added preliminary works on IPC messaging protocol   for caffeine. - XXX: to complete the IPC messagins protocol; to   add foreign process identifier to the messaging   protocol; to define security constraints for   messaging protocol.

--- a/caffeine/caf/CMakeLists.txt
+++ b/caffeine/caf/CMakeLists.txt
@@ -64,6 +64,7 @@ set (CAFFEINE_HEADERS
     caf_io_tool.h
 	caf_ipc.h
     caf_ipc_msg.h
+    caf_ipc_msg_proto.h
     caf_ipc_shm.h
     caf_mem.h
     caf_process.h
