--- a/caffeine/test/CMakeLists.txt
+++ b/caffeine/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-### -*- mode: cmake; indent-tabs-mode: t; tab-width: 4; cmake-tab-width: 4; -*-
+### -*- mode: cmake; -*-
 ### $Id$
 ### project
 project(caffeine C)
@@ -17,6 +17,7 @@ set (MAKE_EXTRA_INCLUDE_FILES
 
 ### includes
 include_directories (
+	/usr/include
 	/usr/local/include
 	/usr/X11R6/include
 	.
@@ -27,23 +28,19 @@ link_directories (
 	/usr/lib
 	/usr/local/lib
 	/usr/X11R6/lib
-	.
-	..
-	src
-	../src
 	)
 
 link_libraries (
 	caffeine
 	)
 
-### lstdl test sources
-set (CAF_LSTDL_SRCS
-	caf_lstdl.c)
+### deque test sources
+set (CAF_DEQUE_SRCS
+	caf_deque.c)
 
-### lstdlc test sources
-set (CAF_LSTDLC_SRCS
-	caf_lstdlc.c)
+### cdeque test sources
+set (CAF_CDEQUE_SRCS
+	caf_cdeque.c)
 
 ### lstc test sources
 set (CAF_LSTC_SRCS
@@ -120,9 +117,11 @@ option (CAFFEINE_DEBUG
 	"Build Caffeine Using Debug"
 	OFF)
 
+set (LINK_FLAGS "-O1")
+
 ### operating systems
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	set (CFLAGS_DEFAULT " ${CFLAGS_DEFAULT} -D_GNU_SOURCE -DLINUX_SYSTEM=1")
+	set (CFLAGS_DEFAULT "${CFLAGS_DEFAULT} -D_GNU_SOURCE -DLINUX_SYSTEM=1")
 	check_library_exists (
 		"dl"
 		"dlopen"
@@ -134,173 +133,173 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 		"/lib:/usr/lib:/usr/local/lib:/opt/lib"
 		HAVE_LIB_RT)
 	if (HAVE_LIB_DL)
-		set (LINK_FLAGS	" ${LINK_FLAGS} -ldl")
-		link_libraries (" ${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
+		set (LINK_FLAGS	"${LINK_FLAGS} -ldl")
+		link_libraries ("${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
 	else (HAVA_LIB_DL)
 		message (FATAL_ERROR "AIO support is required")
 	endif (HAVE_LIB_DL)
 	if (HAVE_LIB_RT)
-		set (LINK_FLAGS " ${LINK_FLAGS} -lrt")
-		link_libraries (" ${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
+		set (LINK_FLAGS "${LINK_FLAGS} -lrt")
+		link_libraries ("${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
 	else (HAVA_LIB_RT)
 		message (FATAL_ERROR "RT support is required")
 	endif (HAVE_LIB_RT)
 endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 if (${CMAKE_SYSTEM_NAME} MATCHES " FreeBSD|NetBSD|OpenBSD")
-	set (CFLAGS_DEFAULT " ${CFLAGS_DEFAULT} -DBSD_SYSTEM=1")
+	set (CFLAGS_DEFAULT "${CFLAGS_DEFAULT} -DBSD_SYSTEM=1")
 endif (${CMAKE_SYSTEM_NAME} MATCHES " FreeBSD|NetBSD|OpenBSD")
 
 ### debug caffeine
 if (CAFFEINE_DEBUG)
-	set (CFLAGS_PROJECT " ${CFLAGS_DEFAULT} ${CFLAGS_DEBUG}")
-	set (LINK_FLAGS " ${LINK_FLAGS} -g3 -pg")
+	set (CFLAGS_PROJECT "${CFLAGS_DEFAULT} ${CFLAGS_DEBUG}")
+	set (LINK_FLAGS "${LINK_FLAGS} -g3 -pg")
 else (CAFFEINE_DEBUG)
-	set (CFLAGS_PROJECT " ${CFLAGS_DEFAULT}")
+	set (CFLAGS_PROJECT "${CFLAGS_DEFAULT}")
 endif (CAFFEINE_DEBUG)
 
 ### caffeine optimizations
 if (CAFFEINE_ARCH)
-	set (CFLAGS_PROJECT " ${CFLAGS_PROJECT} -march=${CAFFEINE_ARCH}")
+	set (CFLAGS_PROJECT "${CFLAGS_PROJECT} -march=${CAFFEINE_ARCH}")
 endif (CAFFEINE_ARCH)
 
 if (CAFFEINE_OPTLEVEL)
-	set (CFLAGS_PROJECT " ${CFLAGS_PROJECT} -O${CAFFEINE_OPTLEVEL}")
+	set (CFLAGS_PROJECT "${CFLAGS_PROJECT} -O${CAFFEINE_OPTLEVEL}")
 endif (CAFFEINE_OPTLEVEL)
 
 ### caffeine library usage
 if (CMAKE_USE_PTHREADS_INIT)
-	set (CFLAGS_PROJECT " ${CFLAGS_PROJECT} -pthread")
-	set (LINK_FLAGS	" ${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
-	link_libraries (" ${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
+	set (CFLAGS_PROJECT "${CFLAGS_PROJECT} -pthread")
+	set (LINK_FLAGS	"${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
+	link_libraries ("${CMAKE_THREAD_LIBS_INIT}")
 else (CMAKE_USE_PTHREADS_INIT)
 	message (FATAL_ERROR "Thread support is required")
 endif (CMAKE_USE_PTHREADS_INIT)
 
 if (PCRE_LIB AND PCRE_INCLUDE)
-	set (LINK_FLAGS " ${LINK_FLAGS} -lpcre")
-	link_libraries (" ${LINK_FLAGS} ${CMAKE_THREAD_LIBS_INIT}")
+	set (LINK_FLAGS "${LINK_FLAGS} -lpcre")
+	link_libraries ("${CMAKE_THREAD_LIBS_INIT}")
 else (PCRE_LIB AND PCRE_INCLUDE)
 	message (FATAL_ERROR "PCRE support is required")
 endif (PCRE_LIB AND PCRE_INCLUDE)
 
 ### source files compile flags
 set_source_files_properties (
-	${CAF_LSTDL_SRCS}
+	${CAF_DEQUE_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
-	${CAF_LSTDLC_SRCS}
+	${CAF_CDEQUE_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_LSTC_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_BUFFER_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_PIDFILE_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_DSM_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_HASH_STR_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_HASHTABLE_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_PPM_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_TPM_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_BOTH_PTM_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_PTH_KEY_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_PTH_MUTEX_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_PTH_RWLOCK_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_IO_TAIL_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_BASE64_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_BASE64_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_BASE64_FILE_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 set_source_files_properties (
 	${CAF_IPCMSG_SRCS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${CFLAGS_PROJECT}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${CFLAGS_PROJECT}")
 
 if (CMAKE_USE_PTHREADS_INIT)
-	LINK_LIBRARIES (" ${CMAKE_THREAD_LIBS_INIT}")
+	LINK_LIBRARIES ("${CMAKE_THREAD_LIBS_INIT}")
 endif (CMAKE_USE_PTHREADS_INIT)
 
 if (COMMAND cmake_policy)
@@ -308,8 +307,8 @@ if (COMMAND cmake_policy)
 endif (COMMAND cmake_policy)
 
 ### build the executables
-add_executable (caf_lstdl ${CAF_LSTDL_SRCS})
-add_executable (caf_lstdlc ${CAF_LSTDLC_SRCS})
+add_executable (caf_deque ${CAF_DEQUE_SRCS})
+add_executable (caf_cdeque ${CAF_CDEQUE_SRCS})
 add_executable (caf_lstc ${CAF_LSTC_SRCS})
 add_executable (caf_buffer ${CAF_BUFFER_SRCS})
 add_executable (caf_dsm ${CAF_DSM_SRCS})
@@ -327,8 +326,8 @@ add_executable (caf_base64_file ${CAF_BASE64_FILE_SRCS})
 add_executable (caf_ipcmsg ${CAF_IPCMSG_SRCS})
 
 set (CAFFEINE_TEST_TARGETS
-	caf_lstdl
-	caf_lstdlc
+	caf_deque
+	caf_cdeque
 	caf_lstc
 	caf_buffer
 	caf_dsm
@@ -348,5 +347,5 @@ set (CAFFEINE_TEST_TARGETS
 set_target_properties (
 	${CAFFEINE_TEST_TARGETS}
 	PROPERTIES
-	LINK_FLAGS " ${LINK_FLAGS}"
-	COMPILE_FLAGS " ${LINK_FLAGS}")
+	LINK_FLAGS "${LINK_FLAGS}"
+	COMPILE_FLAGS "${LINK_FLAGS}")
